[tool.poetry]
name = "linear_regression"
version = "0.1.0"
description = ""
authors = ["Haneen Hashlamoun <haneen.hashlamoun@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.5"
matplotlib = "^3.4.3"
jupyterlab = "^3.2.1"
pandas = "^1.3.4"
numpy = "1.21.0"
scipy = "^1.7.1"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
